# corti

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/actions/rust-setup/: action.yml
.github/workflows/: ci.yml  release.yml  warm-cache.yml
app/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
app/capabilities/: ethics.json  queue.json  settings.json
app/icons/: generate-icons.py  icon.icns
app/src/: activity.rs  cli.rs  config.rs  console.rs  jobs.rs  live.rs  main.rs  permissions.rs  pipeline.rs  queue_ui.rs  settings.rs  stats.rs  transcribe.rs  tray.rs
app/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/ui/src/: App.tsx  Console.tsx  How.tsx  Queue.tsx  Settings.tsx  main.tsx  styles.css
app/ui/src/components/: Badge.tsx  Disclaimer.tsx  Tabs.tsx
app/ui/src/data/: cases.json  culture.json  ethics.json  jurisdictions.json  sources.json  trends.json  types.ts  voiceprint.json
app/ui/src/lib/: api.ts  consent.test.ts  consent.ts  data.ts  pipeline.test.ts  pipeline.ts  queue.test.ts  queue.ts
app/ui/src/settings/: Models.tsx  Paths.tsx  Transcription.tsx
app/ui/src/tabs/: ConsentCalculator.tsx  CulturalNorms.tsx  EthicsVsLegality.tsx  Legality.tsx  Voiceprinting.tsx
bench/: analyze.py  bundle-capture.sh  requirements.txt  sweep.py
bench/acoustic/: room_ir.py
bench/configs/: aec_round1.json  asr_round1.json  asr_round2.json  asr_round3.json  diar_round1.json
bench/fixtures/: .gitignore  README.md  fetch.sh  manifest.json  nx-s1-5844617.5min.reference.txt  nx-s1-5844617.reference.txt  nx-s1-5844617.sweep.reference.txt  nx-s1-5844617.turns.json  nx-s1-5856509.5min.reference.txt  nx-s1-5856509.reference.txt  nx-s1-5856509.sweep.reference.txt  nx-s1-5856509.turns.json  nx-s1-5859441.5min.reference.txt  nx-s1-5859441.reference.txt  nx-s1-5859441.sweep.reference.txt  nx-s1-5859441.turns.json  parse_transcript.py
bench/fixtures/synthetic/: .gitignore  README.md  build_synthetic.py  near.reference.txt
bench/results/: RESULTS.md  aec_round1.jsonl  asr_round1.jsonl  asr_round2.jsonl  asr_round3.jsonl  diar_round1.jsonl
bench/scoring/: align_reference.py  cpwer.py  erle.py  normalize.py  wer.py
crates/corti-aec/: Cargo.toml
crates/corti-aec/examples/: aec_file.rs
crates/corti-aec/src/: lib.rs  score.rs  streaming.rs  tune.rs
crates/corti-bench/: Cargo.toml
crates/corti-bench/src/: audio.rs  lock.rs  main.rs
crates/corti-capture/: Cargo.toml
crates/corti-capture/src/: lib.rs
crates/corti-core/: Cargo.toml
crates/corti-core/src/: app.rs  lib.rs  recording.rs  transcript.rs
crates/corti-coreaudio/: Cargo.toml  Info.plist  SPIKE.md  build.rs  bundle-spike.sh
crates/corti-coreaudio/examples/: micopen.rs  splitwav.rs
crates/corti-coreaudio/src/: capture.rs  lib.rs  listener.rs  process.rs  property.rs  tap.rs
crates/corti-detect/: Cargo.toml
crates/corti-detect/examples/: watch.rs
crates/corti-detect/src/: lib.rs  machine.rs  platform.rs
crates/corti-jobs/: Cargo.toml
crates/corti-jobs/src/: lib.rs
crates/corti-queue/: Cargo.toml
crates/corti-queue/examples/: inspect.rs
crates/corti-queue/src/: lib.rs
crates/corti-tap/: Cargo.toml
crates/corti-tap/src/: main.rs
crates/corti-transcribe/: Cargo.toml
crates/corti-transcribe-aws/: Cargo.toml
crates/corti-transcribe-aws/examples/: transcribe_file.rs
crates/corti-transcribe-aws/src/: lib.rs  parse.rs  wav.rs
crates/corti-transcribe-local/: Cargo.toml  NOTICE  build.rs  fetch-models.sh
crates/corti-transcribe-local/examples/: transcribe_file.rs
crates/corti-transcribe-local/src/: asr.rs  audio.rs  engine.rs  ggml.rs  lib.rs  live.rs  models.rs
crates/corti-transcribe-whisper/: Cargo.toml
crates/corti-transcribe-whisper/src/: lib.rs
crates/corti-transcribe/src/: lib.rs  segment.rs
crates/corti-vagus/: Cargo.toml
crates/corti-vagus/examples/: file_canned.rs
crates/corti-vagus/src/: lib.rs  note.rs
design/: 01-corti-detect.md  02-corti-transcribe.md  03-corti-queue.md  04-corti-aec.md  04a-aec-calibration.md  05-app-tauri.md  06-benchmark-harness.md  LESSONS.md  STATUS.md  guardrails.md  streaming-transcript-update-feasibility.md
design/adr/: 0001-separate-repo-and-vagus-boundary.md  0002-platform-and-capture.md  0003-local-asr-sherpa-onnx.md  0004-informational-webview.md  0004-streaming-compressed-capture.md  0005-streaming-compressed-capture.md  0006-distribution-unsigned-cask-tap.md  0006-far-end-recording-notice-spike.md  0007-streaming-aec-first.md  0008-live-streaming-transcript-in-process.md  0009-chunked-transcription-api.md  0010-live-inbox-filing.md  0011-spike-transcribe-cpp-ggml-asr.md  README.md
docs/: README.md  app.md  architecture.md  audio-pipeline.md  streaming.md  transcription.md
scripts/: render-cask.sh
