[workspace]
resolver = "2"
members = [
    "crates/corti-core",
    "crates/corti-vagus",
    "crates/corti-coreaudio",
    "crates/corti-capture",
    "crates/corti-detect",
    "crates/corti-transcribe",
    "crates/corti-transcribe-aws",
    "crates/corti-transcribe-local",
    "crates/corti-queue",
    "crates/corti-aec",
    "crates/corti-tap",
    "crates/corti-bench",
    "app",
]

[workspace.package]
version = "0.8.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/vasovagal/corti"
# Apple Silicon only, latest macOS only. No Intel, no universal binaries.
rust-version = "1.96"

[workspace.dependencies]
# Internal crates. `version` is required alongside `path` so the crates are publishable to crates.io
# (publish rewrites path deps to version deps).
corti-core = { path = "crates/corti-core", version = "0.8.0" }
corti-vagus = { path = "crates/corti-vagus", version = "0.8.0" }
corti-coreaudio = { path = "crates/corti-coreaudio", version = "0.8.0" }
corti-capture = { path = "crates/corti-capture", version = "0.8.0" }
corti-detect = { path = "crates/corti-detect", version = "0.8.0" }
corti-transcribe = { path = "crates/corti-transcribe", version = "0.8.0" }
corti-transcribe-aws = { path = "crates/corti-transcribe-aws", version = "0.8.0" }
corti-transcribe-local = { path = "crates/corti-transcribe-local", version = "0.8.0" }
corti-queue = { path = "crates/corti-queue", version = "0.8.0" }
corti-aec = { path = "crates/corti-aec", version = "0.8.0" }

# Shared third-party deps, pinned once here.
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Structured logging / diagnostics console (issue #76). Pinned once here so future per-crate
# instrumentation passes share one tracing version across the workspace.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender = "0.2"
# ISO-8601 timestamps for console entries + log file names (UTC, with `Z`).
jiff = "0.2"

# Async edge adapters only (feature-gated): the sync engine stays runtime-free; async lives at the boundary
# (ADR 0009). `default-features = false` keeps the base pin minimal — crates opt into the features they need.
tokio = { version = "1", default-features = false }
futures-core = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1 # single-unit codegen: best raw speed for the M1 Pro daily driver (ADR 0002/0003)
strip = true
