[package]
name = "corti-aec"
description = "Offline acoustic echo cancellation for corti: NLMS adaptive filter to remove speaker bleed."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Frequency-domain block adaptive filter (overlap-save FDAF) — see design/04-corti-aec.md.
rustfft = "6"
rayon = "1"

[dev-dependencies]
# The `aec_file` audition example reads/writes WAVs; tests are pure DSP (std only).
hound = "3.5"
