[package]
name = "corti-queue"
description = "Durable job store for corti: crash-recoverable recording → transcribe → file pipeline state."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
corti-core = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
# JobStatus' snake_case wire form is the source of truth for the `status` column (no drift).
serde_json = { workspace = true }
# Bundled SQLite (vendored, compiled from source) so there's no system-libsqlite dependency.
rusqlite = { version = "0.40", features = ["bundled"] }
