[package]
name = "corti-tap"
description = "Force-tap CLI: capture system audio to a 2-track WAV on demand (Ctrl-C to stop)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "corti-tap"
path = "src/main.rs"

[dependencies]
corti-core = { workspace = true }
corti-capture = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
libc = "0.2"

# --inbox: transcribe + file into vagus. Only pulled in with the `inbox` feature.
corti-transcribe = { workspace = true, optional = true }
corti-transcribe-aws = { workspace = true, optional = true }
corti-vagus = { workspace = true, optional = true }
aws-config = { version = "1", optional = true }
tokio = { version = "1", features = ["rt", "time", "net"], optional = true }

[features]
default = ["inbox"]
inbox = ["dep:corti-transcribe", "dep:corti-transcribe-aws", "dep:corti-vagus", "dep:aws-config", "dep:tokio"]
