[package]
name = "corti-transcribe-aws"
description = "AWS Transcribe (batch) backend for corti: diarized, timestamped transcripts via S3 + Transcribe."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
corti-core = { workspace = true }
corti-transcribe = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# AWS Transcribe batch flow: S3 stage + StartTranscriptionJob/poll. The SDK is async, so we run a private
# tokio current-thread runtime inside the blocking `Transcriber::transcribe` (the trait is sync by design).
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-transcribe = "1"
tokio = { version = "1", features = ["rt", "time", "net"] }

# WAV re-encode: recordings are 32-bit float, AWS Transcribe wants 16-bit PCM.
hound = "3.5"

[dev-dependencies]
# The example plays the app's role and builds a RecordingMeta, which carries chrono timestamps.
chrono = { workspace = true }
