[package]
name = "corti-transcribe-local"
description = "Local on-device backend for corti: fully offline, Apple-Silicon transcription (Parakeet-TDT via ONNX)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
corti-core = { workspace = true }
corti-transcribe = { workspace = true }
anyhow = { workspace = true }
# Structured logging (issue #76): per-model load timing + per-job transcription timing.
tracing = { workspace = true }

# ONNX runtime + models: ASR (Parakeet-TDT transducer), Silero VAD, pyannote speaker diarization — all
# ONNX, one runtime. `static` (default) downloads a prebuilt osx-arm64 lib at first build; set
# SHERPA_ONNX_LIB_DIR for hermetic/offline builds. See design/adr/0003-local-asr-sherpa-onnx.md.
sherpa-onnx = "1.13"

# Read the 2-track WAV (ch0 = mic, ch1 = system tap) that corti-capture writes: 16-bit int raw, or 32-bit
# float once AEC-cleaned.
hound = "3.5"
# Default model cache under ~/Library/Caches/corti/models/ (guardrail #5: outside any vault).
dirs = "6"

# Async `Stream` adapter (feature `stream` only — sync core, async at the edge; ADR 0009). Pinned in the
# workspace root.
tokio = { workspace = true, features = ["sync"], optional = true }
futures-core = { workspace = true, optional = true }

[features]
# Signals that this build links a *CoreML-enabled* sherpa-onnx static lib (which you must supply via
# SHERPA_ONNX_LIB_DIR / SHERPA_ONNX_ARCHIVE_DIR — the crates.io prebuilt has no CoreML execution provider).
# Two effects: (1) `build.rs` adds `framework=CoreML` to the link line, which a CoreML-enabled
# libonnxruntime.a/libsherpa-onnx-core.a requires; (2) the backend passes a `coreml` provider straight
# through instead of mapping it to `cpu`. OFF by default → CPU-only build, byte-for-byte unchanged.
# See design/adr/0003-local-asr-sherpa-onnx.md.
coreml-lib = []

# Async adapter: a `futures_core::Stream<Item = Vec<Word>>` over the sync `LiveTranscriber` (ADR 0009). OFF
# by default — no tokio/futures in the default build; the core stays runtime-free (guardrail 9).
stream = ["dep:tokio", "dep:futures-core"]

[dev-dependencies]
# The transcribe_file example builds a RecordingMeta, which carries chrono timestamps.
chrono = { workspace = true }
