[package]
name = "corti-transcribe-whisper"
description = "Local whisper backend for corti: fully offline diarization-light transcription."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
corti-core = { workspace = true }
corti-transcribe = { workspace = true }
anyhow = { workspace = true }

# When implementing (see design/02-corti-transcribe.md), add:
#   whisper-rs
